# masc-mcp

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  IDEAS.md  LICENSE  Makefile  README.md  c_flags.sexp  dune-project  figma_mcp_audit_report.md  masc_mcp.opam  start-masc-mcp.sh
.gemini/state/cache/: gemini-context-2026-01-30-03.json
.github/workflows/: ci.yml  release.yml
benchmarks/: benchmark.sh  quick-bench.sh
docs/: CELLULAR-AGENT.md  DASHBOARD-INTEGRATION.md  DTLS-RFC6347-COMPLIANCE.md  EXPERT-PANEL-REVIEW.md  GLOSSARY.md  HOLONIC-ARCHITECTURE.md  IMPROVEMENT-PLAN-2025-01.md  IMPROVEMENT-PLAN-2026-01.md  INSTALL-CHECKLIST.md  INTERRUPT-DESIGN.md  MASC-V2-DESIGN.md  MASC_A2A.cfg  MASC_A2A.tla  MCP-TEMPLATE.md  MITOSIS.md  MODE-SYSTEM.md  MULTI-ROOM-DESIGN.md  PERFORMANCE-SLO.md  PRODUCT-REVIEW.md  QUICKSTART.md  RESEARCH-BASED-IMPROVEMENTS.md  RFC-COMPLIANCE-REVIEW.md  SETUP.md  SPEC.md  THOUGHTROOM-ARCHITECTURE.md  WEBHOOK-RECEIVER-DESIGN.md  WEBRTC-COMPARISON.md
examples/: BEST-PRACTICES.md  dune  examples_output.md  level5_9_real_world.ml  masc_agent_example.ml  turn_relay_data_example.ml  turn_relay_example.ml  turn_tls_example.ml
lib/: DO_NOT_OPTIMIZE.md  a2a_tools.ml  agent_card.ml  auth.ml  auto_responder.ml  backend.ml  backend_eio.ml  bounded.ml  cache_eio.ml  cancellation.ml  checkpoint_fs.ml  checkpoint_types.ml  compression_dict.ml  config.ml  credits_dashboard.ml  dashboard.ml  datachannel.ml  datachannel_eio.ml  datachannel_eio.mli  drift_guard.ml  dtls.ml  dtls_crypto.ml  dtls_crypto.mli  dune  effects.ml  encryption.ml  env_config.ml  error.ml  execution_memory.ml  federation.ml  fitness.ml  gcm_compat.ml  graphql_api.ml  handover.ml  handover_eio.ml  hat.ml  heartbeat.ml  heartbeat.mli  hebbian.ml  hebbian_eio.ml  (+143 more)
lib/_lwt_archive/: cache.ml  ice_eio.mli  institution.ml  meta.ml  metrics_store.ml  planning.ml  retry.ml  session_eio.ml  swarm.ml  swarm.mli  telemetry.ml  turn_queue.ml  turn_queue.mli  udp_socket_eio.mli  voice_bridge.ml  voice_bridge.mli  voice_session_manager.mli
proto/: masc.proto
scripts/: bump-version.sh  test_concurrent.sh  test_distributed.sh
test/: Dockerfile.benchmark  bench_burst_send.ml  bench_sctp_batch.ml  bench_sctp_transport.ml  bench_udp_fair.ml  bench_udp_oneway.ml  bench_udp_throughput.ml  dune  test_a2a_distributed.ml  test_a2a_e2e.ml  test_a2a_tools_coverage.ml  test_agent_card_coverage.ml  test_atomic_simple.ml  test_auth.ml  test_auth_coverage.ml  test_auto_responder_coverage.ml  test_backend.ml  test_backend_coverage.ml  test_backend_eio.ml  test_backend_eio_coverage.ml  test_bounded.ml  test_bounded_coverage.ml  test_cache_eio.ml  test_cache_eio_coverage.ml  test_cancellation.ml  test_cancellation_coverage.ml  test_checkpoint.ml  test_checkpoint_fs.ml  test_checkpoint_types_coverage.ml  test_compression.ml  test_compression_dict_coverage.ml  test_concurrency_stress.ml  test_concurrent_distributed.ml  test_config_coverage.ml  test_credits_dashboard_coverage.ml  test_dashboard.ml  test_dashboard_coverage.ml  test_dashboard_resilience_coverage.ml  test_datachannel_coverage.ml  test_datachannel_eio.ml  (+156 more)
test_grpc/: dune.disabled  test_grpc_client.ml
