(library
 (name masc_mcp)
 (public_name masc_mcp)
 (modules
   a2a_tools
   agent_card
   auto_responder
   auth
   error
   backend
   backend_eio
   bounded
   cache_eio
   env_config
   cancellation
   checkpoint_types
   compression_dict
   config
   dashboard
   web_dashboard
   datachannel
   datachannel_eio
   dtls
   dtls_crypto
   encryption
   federation
   gcm_compat
   graphql_api
   handover_eio
   hat
   hebbian_eio
   http_server_eio
   institution_eio
   level2_config
   level4_config
   llm_client_eio
   log
   prometheus
   rate_limit
   masc_mcp
   masc_pb
   mcp_protocol
   mcp_server
   mcp_server_eio
   mcp_session
   metrics_store_eio
   mention
   mind_eio
   mitosis
   mode
   nickname
   noosphere_eio
   notify
   orchestrator
   planning_eio
   progress
   relay
   resilience
   response
   room
   room_eio
   room_walph_eio
   room_git
   room_portal
   room_utils
   room_worktree
   run_eio
   sctp
   sctp_eio
   sctp_transport
   sdp
   session
   spawn
   spawn_eio
   sse
   subscriptions
   swarm_behaviors_eio
   swarm_eio
   telemetry_eio
   tempo
   tools
   transport
   transport_grpc_next
   udp_socket_eio
   types
   validation
   voice_bridge_eio
   voice_stream
   void
   webrtc_bindings
   webrtc_common
   webrtc_datachannel)
 (libraries
   yojson
   base64
   graphql
   graphql_parser
   httpun-ws
   httpun-ws-eio
   bigstringaf
   ;; PostgreSQL backend (Eio-native, non-blocking)
   caqti
   caqti-eio
   caqti-eio.unix
   caqti-driver-postgresql
   sqlite3
   unix
   str
   mirage-crypto
   mirage-crypto-ec
   mirage-crypto-rng
   mirage-crypto-rng.unix
   cstruct
   digestif
   ocaml-protoc-plugin
   pbrt
   pbrt_services
   ;; grpc grpc-lwt - disabled (h2 version conflict with httpun-eio)
   ;; grpc-direct (native Eio gRPC from lib/grpc-direct) - enabled for Transport_grpc_next
   grpc-direct
   grpc-direct-core
   h2
   ctypes
   ctypes-foreign
   ;; OCaml 5.x Eio concurrency (required for *_eio.ml modules)
   eio
   eio_main
   eio_posix
   httpun-eio
   gluten-eio
   ipaddr
   cohttp
   cohttp-eio
   ;; UUID generation (for mind_eio, noosphere_eio)
   uuidm
   ;; Zstd compression
   zstd
   )
 (preprocess (pps ppx_deriving_yojson ppx_deriving.show ppx_deriving.eq)))
